<resources>
    <string name="app_name">WeatherAppTest</string>
    <string name="add_location">add_location</string>
    <string name="weathericon">weatherIcon</string>
    <string name="wind_speed">wind speed</string>
    <string name="humidity_percentage">humidity percentage</string>
    <string name="max_temperature">max temperature</string>
    <string name="avg_temperature">avg temperature</string>
    <string name="min_temperature">min_temperature</string>
    <string name="back_arrow">back arrow</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="history">History</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="list_of_cities">List of cities</string>
    <string name="enter_to_plus_button_for_add_your_location">Enter to plus button to add your location</string>
    <string name="today">Today</string>
</resources>