<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_location"
        android:padding="8dp"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Malang" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Today" />

            <ImageView
                android:id="@+id/weather_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/weathericon"
                app:layout_constraintBottom_toTopOf="@id/thermometer_gain"
                app:layout_constraintHeight_max="160dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/day"
                app:layout_constraintWidth_max="160dp"
                tools:src="@drawable/test_image" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:textSize="90sp"
                app:layout_constraintBottom_toTopOf="@id/thermometer_loss"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/weather_image"
                app:layout_constraintTop_toTopOf="@id/day"
                tools:text="24°" />

            <ImageView
                android:id="@+id/thermometer_gain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/max_temperature"
                app:layout_constraintEnd_toStartOf="@id/thermometer_loss"
                app:layout_constraintHeight_min="70dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weather_image"
                app:layout_constraintWidth_min="70dp"
                tools:src="@drawable/thermometer_gain" />

            <ImageView
                android:id="@+id/thermometer_loss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/min_temperature"
                android:minWidth="70dp"
                android:minHeight="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/thermometer_gain"
                app:layout_constraintTop_toBottomOf="@+id/weather_image"
                tools:src="@drawable/thermometer_loss" />

            <TextView
                android:id="@+id/thermometer_gain_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/thermometer_gain"
                app:layout_constraintStart_toStartOf="@id/thermometer_gain"
                app:layout_constraintTop_toBottomOf="@id/thermometer_gain"
                tools:text="24°" />

            <TextView
                android:id="@+id/thermometer_loss_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/thermometer_loss"
                app:layout_constraintStart_toStartOf="@id/thermometer_loss"
                app:layout_constraintTop_toBottomOf="@id/thermometer_loss"
                tools:text="20°" />

            <ImageView
                android:id="@+id/air"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/wind_speed"
                app:layout_constraintEnd_toEndOf="@id/thermometer_gain"
                app:layout_constraintHeight_min="70dp"
                app:layout_constraintStart_toStartOf="@id/thermometer_gain"
                app:layout_constraintTop_toBottomOf="@id/thermometer_gain_text"
                app:layout_constraintWidth_min="70dp"
                tools:src="@drawable/air" />

            <ImageView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/humidity_percentage"
                app:layout_constraintEnd_toEndOf="@id/thermometer_loss"
                app:layout_constraintHeight_min="70dp"
                app:layout_constraintStart_toStartOf="@id/thermometer_loss"
                app:layout_constraintTop_toBottomOf="@id/thermometer_loss_text"
                app:layout_constraintWidth_min="70dp"
                tools:src="@drawable/humidity_mid" />


            <TextView
                android:id="@+id/air_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"

                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/air"
                app:layout_constraintStart_toStartOf="@id/air"
                app:layout_constraintTop_toBottomOf="@id/air"
                tools:text="2.4 km/h" />

            <TextView
                android:id="@+id/humidity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/humidity"
                app:layout_constraintStart_toStartOf="@id/humidity"
                app:layout_constraintTop_toBottomOf="@id/humidity"
                tools:text="30 %" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_today"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="2"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/day_item" />

</androidx.constraintlayout.widget.ConstraintLayout>